@@ -1,5 +1,8 @@
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
 
+	* releases.py (Releases.list_modules): Set svnmodule.
+
+	* gnome-modules.xml.in: Updated.
 	* releases.xml.in: Update data.
 
 	* gnome-modules.xml.in: Switch to SVN.
